# rormula

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml  test.yml
pyrormula/: Cargo.toml  pyproject.toml
pyrormula/benches/: benchmark.rs
pyrormula/src/: lib.rs
pyrormula/test/: test_wilkinson.py
rormula/: .gitignore  Cargo.toml  README-pypi.md  profile.sh  pyproject.toml  requirements-dev.txt
rormula-rs/: Cargo.toml
rormula-rs/src/: array.rs  lib.rs  result.rs
rormula-rs/src/expression/: expr_arithmetic.rs  expr_wilkinson.rs  mod.rs  ops_common.rs  value.rs
rormula-rs/tests/: test_rormula.rs
rormula/benches/: benchmark.rs
rormula/rormula/: __init__.py  _rormula.pyi  rormula.pyi
rormula/src/: array.rs  lib.rs
rormula/src/expression/: expr_arithmetic.rs  expr_wilkinson.rs
rormula/test/: test_arithmetic.py  test_meta.py  test_version.py  test_wilkinson.py
