[package]
name = "rormula"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rormula"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.2", features = ["generate-import-lib"] }
numpy = "0.20.0"
rormula-rs = { path = "../rormula-rs" }

# The extension module needs to be a feature due to
# https://pyo3.rs/v0.20.0/faq.html#i-cant-run-cargo-test-or-i-cant-build-in-a-cargo-workspace-im-having-linker-issues-like-symbol-not-found-or-undefined-reference-to-_pyexc_systemerror
[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
which = "5.0.0"

[[bench]]
name = "benchmark"
harness = false
