[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "rormula"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = ["pandas"]
license = {file = "rormula/LICENSE"}
description = "Formula parser and evaluator for Wilkinson notation"
readme = "rormula/README.md"
[project.urls]
repository = "github.com/basf/rormula"
homepage = "github.com/basf/rormula"

[tool.maturin]
features = ["pyo3/extension-module"]
